add more handlers for task
