# internal/api/handlers/category.go
@@ -1,0 +1,8 @@
+package handlers
+
+import "github.com/google/uuid"
+
+type Category struct {
+	Id   uuid.UUID `json:"id"`
+	Name string    `json:"name"`
+}
